--- a/documentation/dependencies.html
+++ b/documentation/dependencies.html
@@ -52,11 +52,15 @@
         <li>
             <b>@nestjs/core</b> : ^7.5.1</li>
         <li>
+            <b>@nestjs/mongoose</b> : ^7.2.2</li>
+        <li>
             <b>@nestjs/platform-express</b> : ^7.5.1</li>
         <li>
             <b>class-transformer</b> : ^0.3.1</li>
         <li>
             <b>class-validator</b> : ^0.13.0</li>
+        <li>
+            <b>mongoose</b> : ^5.11.12</li>
         <li>
             <b>reflect-metadata</b> : ^0.1.13</li>
         <li>
