--- a/documentation/miscellaneous/variables.html
+++ b/documentation/miscellaneous/variables.html
@@ -58,6 +58,12 @@
                 <td class="col-md-4">
                     <ul class="index-list">
                         <li>
+                            <a href="#CatsSchema" title="src/cats/schemas/cats.schema.ts"><b>CatsSchema</b>&nbsp;&nbsp;&nbsp;(src/.../cats.schema.ts)</a>
+                        </li>
+                        <li>
+                            <a href="#module" title="src/main.ts"><b>module</b>&nbsp;&nbsp;&nbsp;(src/.../main.ts)</a>
+                        </li>
+                        <li>
                             <a href="#Roles" title="src/common/decorator/roles.decorator.ts"><b>Roles</b>&nbsp;&nbsp;&nbsp;(src/.../roles.decorator.ts)</a>
                         </li>
                     </ul>
@@ -67,6 +73,55 @@
     </table>
 </section>
 
+    <h3>src/cats/schemas/cats.schema.ts</h3>
+    <section>
+    <h3></h3>        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="CatsSchema"></a>
+                        <span class="name">
+                            <b>
+                            CatsSchema</b>
+                            <a href="#CatsSchema"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Default value : </i><code>SchemaFactory.createForClass(Cat)</code>
+                        </td>
+                    </tr>
+
+
+            </tbody>
+        </table>
+</section>
+    <h3>src/main.ts</h3>
+    <section>
+    <h3></h3>        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="module"></a>
+                        <span class="name">
+                            <b>
+                            module</b>
+                            <a href="#module"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >any</a></code>
+
+                        </td>
+                    </tr>
+
+
+            </tbody>
+        </table>
+</section>
     <h3>src/common/decorator/roles.decorator.ts</h3>
     <section>
     <h3></h3>        <table class="table table-sm table-bordered">
